style.css
body {
    margin: 0px;
    font-family: "Roberto", sans-serif;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.top {
    background-color: #1F2937;
    padding: 0px 150px;
    display: flex;
    flex-direction: column;
    gap: 120px;
    color: #F9FAF8;
}

.container1 {
    display: flex;
    flex-direction: row;
    gap: 50px;
    padding-bottom: 250px;
}

.section1 {
    width: 400px;
    flex: auto;
}

.section2 {
    background-color: rgb(98, 98, 98);
    width: 400px;
    
    flex: 0 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-text {
    font-size: 48px;
    font-weight: 900;
}

.signup1 {
    background-color: #3882F6;
    border: none;
    color: white;
    font-weight: 600;
    padding: 8px 30px;
    border-radius: 5px;
}

.header,
.footer {
    display: flex;
    width: 100%;
    margin: 0;
    background-color: #1F2937;
    color: white;
}

.header {
    top: 0;
    justify-content: space-between;
    align-items: center;
    padding-top: 20px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 900;
}

ul {
    display: flex;
    list-style: none;
    gap: 10px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    font-size: 18px;
    bottom: 0;
}

/* ## Second Section */

.container2 {
    display: flex;
    flex-direction: column;
    padding: 100px 50px;
    align-items: center;
    gap: 50px;
}

.blue-box {
    border: 6px solid #3882F6;
    border-radius: 20px;
    width: 200px;
    height: 200px;
}

.center-text {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.biggest-box {
    display: flex;
    justify-content: space-between;
    gap: 15px;
}

.big-box {
    display: flex;
    flex-direction: column;
    gap: 5px;
    max-width: 250px;
}


.text {
    text-align: center;
    font-weight: lighter;
    color: #1F2937
}

/* ## Third Section */

.container3 {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    padding: 200px 100px;
    justify-content: center;
}

.quote {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    color: #1F2937;
}

.quote-name {
    text-align: right;
    font-weight: bold;
    font-size: 20px;
}

